<resources>
    <string name="app_name">Galmoreas</string>
    <string name="login_box">Login</string>
    <string name="password_box">Password</string>
    <string name="reg_link">Register</string>
    <string name="login">LOGIN</string>
    <string name="storedAccount">com.example.sickl.Galmorea.SHARDPREF</string>
    <string name="reg_title">Registration</string>
    <string name="firstname_reg">Firstname</string>
    <string name="lastname_reg">Lastname</string>
    <string name="dob_reg">Birthdate 01/01/1900</string>
    <string name="email_edit">Email</string>
    <string name="password_edit">Password</string>
    <string name="reg_btn">Register</string>
    <string name="reg_choice">Choose Registration</string>
    <string name="start_game">Start Game</string>
    <string name="high_scores">High Scores</string>
    <string name="reset_btn">Reset</string>
    <string name="next_level">Next Level</string>
    <string name="login_btn">Login</string>
    <string name="passwd_reset">Forgot Password ?</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="logout">Logout</string>
    <string name="exit_level">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="email_login">Enter Email</string>
    <string name="passwd_login">Enter Password</string>
    <string name="loading">Loading</string>
    <string name="reset_passwd">Reset Password</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="player_image">player image on wait loop</string>
    <string name="profilepic">google profile picture</string>
</resources>
