<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalmoreasGameStart">


    <TextView
        android:id="@+id/strtgam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/pixel"
        android:paddingTop="75dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="150dp"
        android:fontFamily="@font/pixel"
        app:layout_constraintTop_toBottomOf="@+id/strtgam"/>


    <ImageView
        android:id="@+id/playerWaitAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:scaleX="3"
        android:scaleY="3"
        app:srcCompat="@drawable/player_wait"
        app:layout_constraintTop_toBottomOf="@+id/highscore"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="150dp"
        android:paddingStart="150dp"
        android:fontFamily="@font/pixel"
        app:layout_constraintTop_toBottomOf="@+id/highscore"/>

</android.support.constraint.ConstraintLayout>