<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GalmoreasPasswordReset">


    <ImageView
        android:id="@+id/imageshadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="30dp"
        android:paddingTop="190dp"
        android:scaleX="1.75"
        android:scaleY="1.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/player_shadow" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="2"
        android:scaleX="2"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/login_idle" />


    <TextView
        android:id="@+id/reset_passwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwd_reset"
        android:fontFamily="@font/pixel"
        android:textColor="#000000"
        android:paddingBottom="40dp"
        android:gravity="center"
        android:paddingTop="75dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/imageshadow"/>

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_login"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/reset_passwd_title"/>

    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/email_box"/>

    <Button
        android:id="@+id/rst_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_passwd"
        android:textSize="25sp"
        android:fontFamily="@font/pixel"
        app:layout_constraintTop_toBottomOf="@id/spacer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="25sp"
        android:textColor="#000000"
        android:fontFamily="@font/pixel"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/rst_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>